--- a/src/app/pages/DOCUMENTO/documentos/documentos.component.html
+++ b/src/app/pages/DOCUMENTO/documentos/documentos.component.html
@@ -93,7 +93,7 @@
                                             <td >{{ item.nombres }} {{ item.apellidos}}</td>
                                             <td >{{ item.agencia }} </td>
                                             <td >{{ item.cargo }} </td>
-                                            <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check"></td>
+                                            <td><input id="inputCheck" type="checkbox" [checked]="isSelected(item)" (change)="onCheckboxChange(item)" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check"></td>
                                         </tr>
                                         <tr *ngIf="listaColaboradores.length === 0">
                                             <td colspan="5" style="text-align: center;">No hay registros</td>
