--- a/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.css
+++ b/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.css
@@ -1,121 +1,58 @@
-/* 
-.titulo {
+th , td {
+  text-align: center;
+}
 
-    font-size: 1.5rem;
-  }
-  
-  .card {
-    --border-size: 3px;
-    --border-angle: 0turn;
+.table {
+  font-size: 11px;
+}
+table th {
+  text-align: center;
+}
+table tr th{
+  background:#19948a;
+  color:white;
+  vertical-align:center;
+}
 
-    background-image: conic-gradient( rgb(247, 245, 249), rgb(253, 253, 255) 50%, rgb(250, 247, 252)), conic-gradient(from var(--border-angle), transparent 20%, #08f, #f03);
-    background-size: calc(100% - (var(--border-size) * 2)) calc(100% - (var(--border-size) * 2)), cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    -webkit-animation: bg-spin 3s linear infinite;
-            animation: bg-spin 3s linear infinite;
-  }
-  @-webkit-keyframes bg-spin {
-    to {
-      --border-angle: 1turn;
-    }
-  }
-  @keyframes bg-spin {
-    to {
-      --border-angle: 1turn;
-    }
-  }
+.loader {
+  --size-loader: 70px;
+  --size-orbe: 10px;
+  width: var(--size-loader);
+  height: var(--size-loader);
+  position: relative;
+  transform: rotate(45deg);
+}
 
-  
-  @property --border-angle {
-    syntax: "<angle>";
-    inherits: true;
-    initial-value: 0turn;
-  }
- 
+.orbe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  --delay: calc(var(--index) * 0.1s);
+  animation: orbit7456 ease-in-out 1.5s var(--delay) infinite;
+  opacity: calc(1 - calc(0.2 * var(--index)));
+}
 
-  .loader {
-    --size-loader: 70px;
-    --size-orbe: 10px;
-    width: var(--size-loader);
-    height: var(--size-loader);
-    position: relative;
-    transform: rotate(45deg);
-  }
-  
-  .orbe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    --delay: calc(var(--index) * 0.1s);
-    animation: orbit7456 ease-in-out 1.5s var(--delay) infinite;
-    opacity: calc(1 - calc(0.2 * var(--index)));
-  }
-  
-  .orbe::after {
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: var(--size-orbe);
-    height: var(--size-orbe);
-    background-color: #3ae374;
-    box-shadow: 0px 0px 20px 2px #3ae374;
-    border-radius: 50%;
-  }
-  
-  @keyframes orbit7456 {
-    0% {
-    }
-  
-    80% {
-      transform: rotate(360deg);
-    }
-  
-    100% {
-      transform: rotate(360deg);
-    }
+.orbe::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: var(--size-orbe);
+  height: var(--size-orbe);
+  background-color: #3ae374;
+  box-shadow: 0px 0px 20px 2px #3ae374;
+  border-radius: 50%;
+}
+
+@keyframes orbit7456 {
+  0% {
   }
 
-  
-  .form {
-    background-image: linear-gradient(-225deg, #effefd 50%, #8dddd0 50%);
+  80% {
+    transform: rotate(360deg);
   }
-  
-  button, input, select {
-    border: 0;
-    outline: 0;
-    font-size: 16px;
-    border-radius: 320px;
-    padding: 16px;
-    background-color: #EBECF0;
-    text-shadow: 1px 1px 0 #FFF;
+
+  100% {
+    transform: rotate(360deg);
   }
-  
-  input {
-    margin-right: 8px;
-    box-shadow: inset 2px 2px 5px #BABECC, inset -5px -5px 10px #FFF;
-    width: 100%;
-    box-sizing: border-box;
-    transition: all 0.2s ease-in-out;
-    appearance: none;
-    -webkit-appearance: none;
-  }
-  input:focus {
-    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
-  }
-  
-  button {
-    color: #61677C;
-    font-weight: bold;
-    
-    transition: all 0.2s ease-in-out;
-    cursor: pointer;
-    font-weight: 600;
-  }
-  button:hover {
-    box-shadow: -2px -2px 5px #FFF, 2px 2px 5px #BABECC;
-  }
-  button:active {
-    box-shadow: inset 1px 1px 2px #BABECC, inset -1px -1px 2px #FFF;
-  } */
+}
