--- a/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.html
+++ b/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.html
@@ -25,13 +25,6 @@
                                         </div>
                                     </div>
                                     <div class="col-md-2 mb-2">
-                                        <label class="form-label">Calificación mínima</label>
-                                        <input type="number"  id="calificacionMinima" class="form-control" placeholder="Calificación mínima" formControlName="calificacionMinima" required>
-                                        <div class="alert alert-danger mt-2" [hidden]="calificacionMinima.valid || calificacionMinima.pristine">
-                                            Debes ingresar una calificación
-                                        </div>
-                                    </div>
-                                    <div class="col-md-2 mb-2">
                                         <label class="form-label">Intentos</label>
                                         <select [(ngModel)]='ngSelect' class="form-select" id="intentos" formControlName="intentos" required>
                                             <option value="0" disabled selected>Selecciona</option>
@@ -42,17 +35,27 @@
                                             Debes seleccionar la cantidad de intentos
                                         </div>
                                     </div>
+                                    <div class="col-md-2 mb-2">
+                                        <label class="form-label">Calificación mínima</label>
+                                        <input type="number" min="0" max="10"  id="calificacionMinima" class="form-control" placeholder="Calificación mínima" formControlName="calificacionMinima" required>
+                                        <div class="alert alert-danger mt-2" [hidden]="calificacionMinima.valid || calificacionMinima.pristine">
+                                            Debes ingresar una calificación
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="modal-footer footer">
-                                    <button type="button" class="btn btn-secondary cancelar" >
-                                        Cancelar
-                                    </button>
-                                    <button type="submit" class="btn btn-success" id="btnGuardar" (click)="guardarEvaluacion()" [disabled]="!formEvaluacion.valid">
-                                        Guardar
-                                    </button>
-                                    <button type="submit" class="btn btn-success" id="btnActualizar" (click)="editar()" [disabled]="!formEvaluacion.valid">
-                                        Actualizar
-                                    </button>
+                                <div class="mt-2">
+                                    <button type="button" class="btn btn-info float-start" data-bs-toggle="modal" data-bs-target="#exampleModal" id="btnAgregar" [disabled]="!formEvaluacion.valid" (click)="reset()">Agregar Grupo</button>
+                                    <div class="float-end">
+                                        <button type="button" class="btn btn-secondary cancelar" >
+                                            Cancelar
+                                        </button>
+                                        <button type="submit" class="btn btn-success ms-2" id="btnGuardar" (click)="guardar()" [disabled]="!formEvaluacion.valid">
+                                            Guardar
+                                        </button>
+                                        <button type="submit" class="btn btn-success ms-2" id="btnActualizar" (click)="editar()" [disabled]="!formEvaluacion.valid">
+                                            Actualizar
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <!-- <app-tabevaluaciones (eventoEnviarDataGrupo)="pasarDatosGrupo($event)" (eventoEnviarDataPregunta)="pasarDatosPregunta($event)"></app-tabevaluaciones> -->
@@ -60,7 +63,145 @@
                     </div>
                 </div>
             </div>
+            <div class="card " id="cardGrupo" hidden>
+                <div class="card-body ">
+                    <div class="form mt-3">
+                        <div class="row">
+                            <h1 class="card-title text-center titulo" id="title">Grupos</h1>
+                            <form id="form">
+                                <div class="row">
+                                    
+                                    <div class="col-md-12 mb-2">
+                                        <table [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>N°</th>
+                                                    <th>Nombre del grupo</th>
+                                                    <th>Apertura</th>
+                                                    <th>Cierre</th>
+                                                    <th>Intentos</th>
+                                                    <th>Acciones</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr *ngFor="let item of listaGrupos; let i = index;">
+                                                    <td>{{ i + 1 }}</td>
+                                                    <td >{{ item.nombre }} </td>
+                                                    <td>{{ item.apertura}}</td>
+                                                    <td>{{ item.cierre  }}</td>
+                                                    <td>{{ item.intentos  }}</td>
+                                                    <td>
+                                                        <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarEvaluacion(item)">
+                                                            <i class="bi bi-trash" style="font-size: 1rem; color: rgb(248, 29, 29);"></i>
+                                                        </a>
+                                                    </td>
+                                                </tr>
+                                                <tr *ngIf="listaGrupos.length === 0">
+                                                    <td colspan="6" style="text-align: center;">No hay registros</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Guardar Grupo</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card ">
+                            <div class="card-body ">
+                                <div class="form mt-3">
+                                    <div class="row">
+                                        <!-- <h1 class="card-title text-center titulo" id="title">Guardar grupo</h1> -->
+                                        <form [formGroup]="formGrupos" id="form">
+                                            <div class="row">
+                                                <div class="col-md-6 mb-2">
+                                                    <label class="form-label">Ingresa el nombre del grupo:</label>
+                                                    <input class="form-control" type="text" id="nombreG" formControlName="nombreG" placeholder="Agregar un nombre" required>
+                                                    <div class="alert alert-danger mt-2" [hidden]="nombreG.valid || nombreG.pristine">
+                                                        Debes agregar una nombre...
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-3 mb-2">
+                                                    <label for="apertura" class="form-label">Apertura:</label>
+                                                    <input class="form-control" type="datetime-local" id="apertura" formControlName="apertura" placeholder="Agregar una fecha" required>
+                                                    <div class="alert alert-danger mt-2" [hidden]="apertura.valid || apertura.pristine">
+                                                        Debes agregar fecha de inica...
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-3 mb-2">
+                                                    <label for="cierre" class="form-label">Cierre:</label>
+                                                    <input class="form-control" type="datetime-local" id="cierre" formControlName="cierre" placeholder="Agregar una fecha" required>
+                                                    <div class="alert alert-danger mt-2" [hidden]="cierre.valid || cierre.pristine">
+                                                        Debes agregar fecha de finalización...
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-12 mb-2 mt-4">
+                                                    
+                                                    <div class="mx-auto loader" *ngIf="isLoading">
+                                                        <div class="orbe" style="--index: 0"></div>
+                                                        <div class="orbe" style="--index: 1"></div>
+                                                        <div class="orbe" style="--index: 2"></div>
+                                                        <div class="orbe" style="--index: 3"></div>
+                                                        <div class="orbe" style="--index: 4"></div>
+                                                    </div>
+                                
+                                                    <table *ngIf="!isLoading" [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>N°</th>
+                                                                <th>Nombre completo</th>
+                                                                <th>Agencia</th>
+                                                                <th>Cargo</th>
+                                                                <th>¿Incluir?</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr *ngFor="let item of listaColaboradores; let i = index;">
+                                                                <td class="user">{{ item.id }}</td>
+                                                                <td >{{ item.nombres }} {{ item.apellidos }}</td>
+                                                                <td>{{ item.agencia}}</td>
+                                                                <td>{{ item.cargo  }}</td>
+                                                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)"  [checked]="isSelected(item)" (change)="onCheckboxChange(item)" [checked]="datos.includes(item.id)" formControlName="check"></td>
+                                                            </tr>
+                                                            <tr *ngIf="listaColaboradores.length === 0">
+                                                                <td colspan="5" style="text-align: center;">No hay registros</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                            <div class="">
+                                                <!-- <button type="button" class="btn btn-info float-start" data-bs-toggle="modal" data-bs-target="#exampleModal" id="btnAgregar">Agregar Evaluación</button> -->
+                                                <div class="float-end">
+                                                <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()" data-bs-dismiss="modal">Cancelar</button>
+                                                <button type="submit" id="btnAceptar" class="btn btn-success ms-2" (click)="agregar()" [disabled]="!formGrupos.valid" data-bs-dismiss="modal">Guardar grupo</button>
+                                                <button type="submit" id="btnActualizar" class="btn btn-success ms-2" (click)="editar()" data-bs-dismiss="modal" hidden>Actualizar grupo</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
