--- a/src/app/pages/EVALUACIONES/grupo/grupo.component.html
+++ b/src/app/pages/EVALUACIONES/grupo/grupo.component.html
@@ -127,7 +127,7 @@
                                                 <td >{{ item.nombres }} {{ item.apellidos }}</td>
                                                 <td>{{ item.agencia}}</td>
                                                 <td>{{ item.cargo  }}</td>
-                                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check"></td>
+                                                <td><input id="inputCheck" type="checkbox" [checked]="isSelected(item)" (change)="onCheckboxChange(item)" (change)="handleCheckboxChange($event)"  [checked]="datos.includes(item.id)" formControlName="check"></td>
                                             </tr>
                                             <tr *ngIf="listaColaboradores.length === 0">
                                                 <td colspan="5" style="text-align: center;">No hay registros</td>
@@ -136,13 +136,6 @@
                                     </table>
                                 </div>
                             </div>
-                            <!-- <div class="modal-footer">
-                                <button type="button" class="btn btn-info" (click)="cancelar()">Agregar Evaluación</button>
-                                <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()">Cancelar</button>
-                                <button type="submit" id="btnAceptar" class="btn btn-success" (click)="guardar()" [disabled]="!formGrupos.valid">Guardar grupo</button>
-                                <button type="submit" id="btnActualizar" class="btn btn-success" (click)="editar()" >Actualizar grupo</button>
-                            </div> -->
-
                             <div class="">
                                 <button type="button" class="btn btn-info float-start" data-bs-toggle="modal" data-bs-target="#exampleModal" id="btnAgregar">Agregar Evaluación</button>
                                 <div class="float-end">
@@ -150,7 +143,53 @@
                                   <button type="submit" id="btnAceptar" class="btn btn-success ms-2" (click)="guardar()" [disabled]="!formGrupos.valid">Guardar grupo</button>
                                   <button type="submit" id="btnActualizar" class="btn btn-success ms-2" (click)="editar()">Actualizar grupo</button>
                                 </div>
-                              </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card " id="cardEvaluacion" hidden>
+            <div class="card-body ">
+                <div class="form mt-3">
+                    <div class="row">
+                        <h1 class="card-title text-center titulo" id="title">Evaluación</h1>
+                        <form id="form">
+                            <div class="row">
+                                
+                                <div class="col-md-12 mb-2">
+                                    <table [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
+                                        <thead>
+                                            <tr>
+                                                <th>N°</th>
+                                                <th>Nombre de la evaluación</th>
+                                                <th>Descripción</th>
+                                                <th>Calificación mínima</th>
+                                                <th>Intentos</th>
+                                                <th>Acciones</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let item of listaEvaluacion; let i = index;">
+                                                <td class="user">{{ i + 1 }}</td>
+                                                <td >{{ item.nombreE }} </td>
+                                                <td>{{ item.descripcion}}</td>
+                                                <td>{{ item.calificacionMinima  }}</td>
+                                                <td>{{ item.intentos  }}</td>
+                                                <td>
+                                                    <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarEvaluacion(item)">
+                                                        <i class="bi bi-trash" style="font-size: 1rem; color: rgb(248, 29, 29);"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                            <tr *ngIf="listaEvaluacion.length === 0">
+                                                <td colspan="6" style="text-align: center;">No hay registros</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -194,7 +233,7 @@
                                                 </div>
                                                 <div class="col-md-2 mb-2">
                                                     <label class="form-label">Calificación mínima</label>
-                                                    <input type="number"  id="calificacionMinima" class="form-control" placeholder="Calificación mínima" formControlName="calificacionMinima" required>
+                                                    <input type="number" min="0" max="10" id="calificacionMinima" class="form-control" placeholder="Calificación mínima" formControlName="calificacionMinima" required>
                                                     <div class="alert alert-danger mt-2" [hidden]="calificacionMinima.valid || calificacionMinima.pristine">
                                                         Debes ingresar una calificación
                                                     </div>
@@ -232,17 +271,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="modal-footer footer">
-            <button type="button" class="btn btn-secondary cancelar" >
-                Cancelar
-            </button>
-            <button type="submit" class="btn btn-success" id="btnGuardar" (click)="guardarEvaluacion()" [disabled]="!formEvaluacion.valid">
-                Guardar
-            </button>
-            <button type="submit" class="btn btn-success" id="btnActualizar" (click)="editar()" [disabled]="!formEvaluacion.valid">
-                Actualizar
-            </button>
-        </div> -->
       </div>
     </div>
 </div>
