PORTAL: Avance de observaciones de evaluaciones

--- a/src/app/pages/COLABORADORES/datatable/dtcolaboradoresintentos/dtcolaboradoresintentos.component.html
+++ b/src/app/pages/COLABORADORES/datatable/dtcolaboradoresintentos/dtcolaboradoresintentos.component.html
@@ -30,6 +30,9 @@
                     </a>
                 </td>
             </tr>
+            <tr *ngIf="listaColaboradorIntentos.length == 0">
+                <td colspan="5" style="text-align: center;">No hay registros</td>
+            </tr>
         </tbody>
     </table>
 </div>
