--- a/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.css
+++ b/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.css
@@ -11,7 +11,7 @@ table th {
 table tr th{
   background:#19948a;
   color:white;
-  vertical-align:center;
+  /* vertical-align:center; */
 }
 
 .loader {
