--- a/src/app/pages/EVALUACIONES/listresultadosevaluacion/listresultadosevaluacion.component.html
+++ b/src/app/pages/EVALUACIONES/listresultadosevaluacion/listresultadosevaluacion.component.html
@@ -15,5 +15,20 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="form mt-3">
+                    <div class="row">
+                        <div class="col-12 mx-auto d-flex justify-content-center">
+                            <h5 class="card-title">Listado de intentos fallidos de colaboradores por evaluación</h5>
+                        </div>
+                        <div class="col-3 mt-2 d-flex flex-row justify-content-end p-2">
+                            
+                        </div>
+                    </div>
+                    <app-dtcolaboradoresintentos></app-dtcolaboradoresintentos>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
