--- a/src/app/pages/EVALUACIONES/preguntas/preguntas.component.html
+++ b/src/app/pages/EVALUACIONES/preguntas/preguntas.component.html
@@ -82,7 +82,7 @@
                 <button id="btnGuardarPreguntas" type="button" class="btn btn-success mx-auto" (click)="guardarPregunta()">Guardar preguntas...</button>
             </div>
             <div class="col-md-6 mx-auto text-center d-flex align-items-center" *ngIf="ocultarBotonEdit == true">
-                <button id="btnEditarPreguntas" type="button" class="btn btn-info mx-auto" (click)="editarPreguntas()">Actualizar preguntas...</button>
+                <button id="btnEditarPreguntas" type="button" class="btn btn-info mx-auto" (click)="editarPreguntas()" hidden>Actualizar preguntas...</button>
             </div>
         </div>
     </div>
