--- a/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.html
+++ b/src/app/pages/EVALUACIONES/evaluacion/evaluacion.component.html
@@ -30,6 +30,9 @@
                                             <option value="0" disabled selected>Selecciona</option>
                                             <option value="1">1</option>
                                             <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
                                         </select>
                                         <div class="alert alert-danger mt-2" [hidden]="intentos.valid || intentos.pristine">
                                             Debes seleccionar la cantidad de intentos
@@ -63,50 +66,53 @@
                     </div>
                 </div>
             </div>
-            <div class="card " id="cardGrupo" hidden>
-                <div class="card-body ">
-                    <div class="form mt-3">
-                        <div class="row">
-                            <h1 class="card-title text-center titulo" id="title">Grupos</h1>
-                            <form id="form">
-                                <div class="row">
-                                    
-                                    <div class="col-md-12 mb-2">
-                                        <table [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
-                                            <thead>
-                                                <tr>
-                                                    <th>N°</th>
-                                                    <th>Nombre del grupo</th>
-                                                    <th>Apertura</th>
-                                                    <th>Cierre</th>
-                                                    <th>Intentos</th>
-                                                    <th>Acciones</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr *ngFor="let item of listaGrupos; let i = index;">
-                                                    <td>{{ i + 1 }}</td>
-                                                    <td >{{ item.nombre }} </td>
-                                                    <td>{{ item.apertura}}</td>
-                                                    <td>{{ item.cierre  }}</td>
-                                                    <td>{{ item.intentos  }}</td>
-                                                    <td>
-                                                        <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarEvaluacion(item)">
-                                                            <i class="bi bi-trash" style="font-size: 1rem; color: rgb(248, 29, 29);"></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
-                                                <tr *ngIf="listaGrupos.length === 0">
-                                                    <td colspan="6" style="text-align: center;">No hay registros</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </form>
+        </div>
+    </div>
+</div>
+<div class="card " id="cardGrupo" hidden>
+    <div class="card-body ">
+        <div class="form mt-3">
+            <div class="row">
+                <h1 class="card-title text-center titulo" id="title">Grupos</h1>
+                <form id="form">
+                    <div class="row">
+                        
+                        <div class="col-md-12 mb-2">
+                            <table [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
+                                <thead>
+                                    <tr>
+                                        <th>N°</th>
+                                        <th>Nombre del grupo</th>
+                                        <th>Apertura</th>
+                                        <th>Cierre</th>
+                                        <th>Intentos</th>
+                                        <th>Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let item of listaGrupos; let i = index;">
+                                        <td>{{ i + 1 }}</td>
+                                        <td >{{ item.nombreG }} </td>
+                                        <td>{{ item.apertura}}</td>
+                                        <td>{{ item.cierre  }}</td>
+                                        <td>{{ item.intentos  }}</td>
+                                        <td>
+                                            <a type="button" class="ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar grupo" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="cargarGrupo(item)">
+                                                <i class="bi bi-pencil-square" style="font-size: 1rem; color: rgb(8, 134, 252);"></i>
+                                            </a>
+                                            <a type="button" class=" ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Deshabilitar" (click)="eliminarGrupo(item)">
+                                                <i class="bi bi-trash" style="font-size: 1rem; color: rgb(248, 29, 29);"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr *ngIf="listaGrupos.length === 0">
+                                        <td colspan="6" style="text-align: center;">No hay registros</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
@@ -161,7 +167,7 @@
                                                         <div class="orbe" style="--index: 4"></div>
                                                     </div>
                                 
-                                                    <table *ngIf="!isLoading" [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+                                                    <table  [ngClass]="{'table-responsive': true}"  datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
                                                         <thead>
                                                             <tr>
                                                                 <th>N°</th>
@@ -177,11 +183,11 @@
                                                                 <td >{{ item.nombres }} {{ item.apellidos }}</td>
                                                                 <td>{{ item.agencia}}</td>
                                                                 <td>{{ item.cargo  }}</td>
-                                                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)"  [checked]="isSelected(item)" (change)="onCheckboxChange(item)" [checked]="datos.includes(item.id)" formControlName="check"></td>
+                                                                <td><input id="inputCheck" type="checkbox" (change)="handleCheckboxChange($event)"  [checked]="isSelected(item.id)" (change)="onCheckboxChange(item.id)" [checked]="datos.includes(item.id)" formControlName="check"></td>
                                                             </tr>
-                                                            <tr *ngIf="listaColaboradores.length === 0">
+                                                            <!-- <tr *ngIf="listaColaboradores.length === 0">
                                                                 <td colspan="5" style="text-align: center;">No hay registros</td>
-                                                            </tr>
+                                                            </tr> -->
                                                         </tbody>
                                                     </table>
                                                 </div>
@@ -191,7 +197,7 @@
                                                 <div class="float-end">
                                                 <button type="button" class="btn btn-secondary cancelar" (click)="cancelar()" data-bs-dismiss="modal">Cancelar</button>
                                                 <button type="submit" id="btnAceptar" class="btn btn-success ms-2" (click)="agregar()" [disabled]="!formGrupos.valid" data-bs-dismiss="modal">Guardar grupo</button>
-                                                <button type="submit" id="btnActualizar" class="btn btn-success ms-2" (click)="editar()" data-bs-dismiss="modal" hidden>Actualizar grupo</button>
+                                                <button type="submit" id="btnActualizar" class="btn btn-success ms-2" (click)="editarGrupo()" data-bs-dismiss="modal" >Actualizar grupo</button>
                                                 </div>
                                             </div>
                                         </form>
